--- a/info.html
+++ b/info.html
@@ -46,7 +46,7 @@
     <div style="text-align: center;font-family: JetBrains; color:white;margin-top:50px;"><button style="font-size:20px; font-family: JetBrains; color:white; border: none; background-color: rgb(32, 149, 170);" onclick="window.location.href='index.html';">Main</button> <button style="margin-left:10px;font-size:20px; font-family: JetBrains; color:white; border: none; background-color: rgb(32, 170, 124);" onclick="window.location.href='projects.html';">Projects</button><button style="font-size:20px;font-family: JetBrains; color:white; border: none; background-color: rgb(57, 32, 170);margin-right:20px;margin-left:20px;" onclick="window.location.href='socials.html';">Socials</button><button style="font-size:20px;font-family: JetBrains; color:white; border: none; background-color: rgb(170, 32, 113);" onclick="window.location.href='info.html';">Info</button></div>
     <br><br>
     <p style="text-align: center; color:white;font-family: JetBrains;font-size:24px;">About me:</p>
-    <p style="text-align: center; color:white;font-family: JetBrains;font-size:19px;">Hello, I'm an Astronomy GCSE student<br> and Astrophotographer. I'm also a Java<br>dev who enjoys using libraries like libGDX<br>& PaperMC. I'm currently learning C# and C++!<br>I love dinghy sailing with 4 years experience.</p>
+    <p style="text-align: center; color:white;font-family: JetBrains;font-size:19px;">Hello, I'm an Astronomy nerd, Astrophotographer<br>and Programmer (mainly using C++ for hobby projects,<br>but I'll use Java if forced...). I'm currently doing Geography, Triple Science,<br>Computer Science and Drama for GCSE (with core of course). I do dinghy sailing with<br>4 years of experience</p>
 
 
     <br><br>
@@ -68,3 +68,4 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
+
